--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile "com.android.support:palette-v7:$supportLibVersion"
     compile "com.android.support:support-v4:$supportLibVersion"
     compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:exifinterface:$supportLibVersion"
     compile "com.android.support:multidex:1.0.1"
 
     // Play Services
