--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -156,7 +156,7 @@ android {
 
 // Kotlin
 buildscript {
-    ext.kotlin_version = '1.1.2'
+    ext.kotlin_version = '1.1.2-2'
     repositories {
         mavenCentral()
     }
