--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,5 @@ include ':GalleryMultiPicker:library'
 include ':twpfparser'
 include ':yukari-processor-runtime'
 include ':yukari-processor'
+include ':androidmagick'
+include ':YukariMagickDecoder'
