--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ allprojects {
         maven {
             url 'http://192.168.11.37:8081/repository/maven-public/'
         }
+        maven {
+            url "https://maven.google.com"
+        }
         jcenter()
     }
 }
