--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -158,7 +158,7 @@ android {
 
 // Kotlin
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.1.60'
     repositories {
         mavenCentral()
     }
