--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -132,8 +132,8 @@ android {
     }
 
     lintOptions {
-//        checkReleaseBuilds false
-//        abortOnError false
+        checkReleaseBuilds false
+        abortOnError false
         ignore 'MissingTranslation'
     }
 
