--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -151,6 +151,7 @@ android {
         debug {
             debuggable true
             minifyEnabled true
+            useProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         release {
