--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-/Yukari/build
-/build
-/.gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea/*
+!/YukariProject/.idea/dictionaries/
+!/YukariProject/.idea/encodings.xml
+!/YukariProject/.idea/misc.xml
+/.gradle/
+/.settings/
+/build/
+/captures/
 /Yukari/*.apk
-/captures
+/Yukari/build/
 .directory
 *.apk
+*.iml
