--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -123,7 +123,7 @@ android {
         vectorDrawables.useSupportLibrary = true
 
         ndk {
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86'
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
         }
     }
 
