--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="shibafu.yukari"
     android:installLocation="auto"
     android:versionCode="96"
-    android:versionName="2.1.0.415-dev (linkage 180220)" >
+    android:versionName="2.1.0.416-dev (linkage 180221)" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -54,6 +54,16 @@
 
                 <data
                     android:host="twitter"
+                    android:scheme="yukari" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="mastodon"
                     android:scheme="yukari" />
             </intent-filter>
         </activity>
