--- a/YukariMagickDecoder/build.gradle
+++ b/YukariMagickDecoder/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "info.shibafu528.yukari.magickdecoder"
@@ -24,6 +24,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':androidmagick')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':androidmagick')
 }
