--- a/YukariMagickDecoder/build.gradle
+++ b/YukariMagickDecoder/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+ext {
+    abiCodes = ['armeabi': 1, 'armeabi-v7a': 2, 'arm64-v8a': 3, 'x86': 4, 'x86_64': 5]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "27.0.3"
@@ -8,12 +12,8 @@ android {
         applicationId "info.shibafu528.yukari.magickdecoder"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
-
-        ndk {
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
-        }
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -21,9 +21,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    splits {
+        abi {
+            enable true
+            reset()
+
+            include 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            universalApk false
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':androidmagick')
+}
+
+import com.android.build.OutputFile
+
+android.applicationVariants.all { variant ->
+    variant.outputs.each { output ->
+        def baseAbiVersionCode = project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+        if (baseAbiVersionCode != null) {
+            output.versionCodeOverride = variant.versionCode * 10 + baseAbiVersionCode
+        }
+    }
 }
