--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -349,6 +349,10 @@
 
         <service
             android:name=".service.BitmapDecoderService"/>
+
+        <activity
+            android:name=".activity.ChannelManageActivity"
+            android:label="@string/title_activity_channel_manage"/>
    </application>
 
 </manifest>
