--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,6 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 
 #kotlin.incremental=true
+kotlin.coroutines=enable
 
 yukari.exvoice.build=false
