[Mastodon] Mention TLのRESTパラメータで返信以外のイベントを除外した

--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -50,7 +50,8 @@ dependencies {
     implementation "com.github.takke.twitter4j:twitter4j-http2-support:2612db7f15"
 
     // Mastodon
-    implementation "com.github.sys1yagi.mastodon4j:mastodon4j:${mastodon4jVersion}"
+//    implementation "com.github.sys1yagi.mastodon4j:mastodon4j:${mastodon4jVersion}"
+    implementation "com.github.shibafu528.mastodon4j:mastodon4j:yukari-SNAPSHOT"
 
     // パーサ
     implementation 'com.google.code.gson:gson:2.8.1'
