Update Twitter4J 4.0.7-SNAPSHOT

--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -10,12 +10,15 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+    maven {
+        url "http://twitter4j.org/maven2"
+    }
 }
 
 ext {
     supportLibVersion = '25.4.0'
     playServicesVersion = '11.4.0'
-    twitter4jVersion = '4.0.5'
+    twitter4jVersion = '4.0.7-SNAPSHOT'
     leakCanaryVersion = '1.5.4'
 }
 
@@ -43,14 +46,14 @@ dependencies {
     compile project(':GalleryMultiPicker:library')
 
     // Twitter4J
-//    compile "org.twitter4j:twitter4j-core:${twitter4jVersion}"
-//    compile "org.twitter4j:twitter4j-media-support:${twitter4jVersion}"
-//    compile "org.twitter4j:twitter4j-stream:${twitter4jVersion}"
-//    compile "org.twitter4j:twitter4j-http2-support:${twitter4jVersion}"
-    compile "com.github.takke.twitter4j:twitter4j-core:2612db7f15"
-    compile "com.github.takke.twitter4j:twitter4j-media-support:2612db7f15"
-    compile "com.github.takke.twitter4j:twitter4j-stream:2612db7f15"
-    compile "com.github.takke.twitter4j:twitter4j-http2-support:2612db7f15"
+    compile "org.twitter4j:twitter4j-core:${twitter4jVersion}"
+    compile "org.twitter4j:twitter4j-media-support:${twitter4jVersion}"
+    compile "org.twitter4j:twitter4j-stream:${twitter4jVersion}"
+    compile "org.twitter4j:twitter4j-http2-support:${twitter4jVersion}"
+//    compile "com.github.takke.twitter4j:twitter4j-core:2612db7f15"
+//    compile "com.github.takke.twitter4j:twitter4j-media-support:2612db7f15"
+//    compile "com.github.takke.twitter4j:twitter4j-stream:2612db7f15"
+//    compile "com.github.takke.twitter4j:twitter4j-http2-support:2612db7f15"
 
     // パーサ
     compile 'com.google.code.gson:gson:2.8.1'
