--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -11,12 +11,47 @@ repositories {
     }
 }
 
+class GitUtil {
+    static def getRevHash() {
+        def proc = ["git", "rev-parse", "HEAD"].execute()
+        proc.waitFor()
+        return proc.inputStream.readLines().first()
+    }
+
+    static def getRevCount() {
+        def proc = ["git", "rev-list", "--count", "HEAD"].execute()
+        proc.waitFor()
+        return proc.inputStream.readLines().first()
+    }
+
+    static def isDirty() {
+        def proc = ["git", "status", "--porcelain"].execute()
+        proc.waitFor()
+        return proc.inputStream.readLines().size() > 0
+    }
+}
+
 ext {
     supportLibVersion = '25.4.0'
     playServicesVersion = '11.4.0'
     twitter4jVersion = '4.0.7-SNAPSHOT'
     mastodon4jVersion = '1.6.0'
     leakCanaryVersion = '1.5.4'
+
+    y4aVersionMajor = 2
+    y4aVersionMinor = 1
+    y4aVersionPatch = 0
+    y4aVersionSuffix = '-dev'
+    y4aCodeName = 'linkage'
+
+    y4aRevision = GitUtil.revHash.substring(0, 7)
+    if (GitUtil.isDirty()) {
+        y4aRevision += "*"
+    }
+    y4aBuildDate = new Date().format("yyMMdd")
+    y4aVersionString = [y4aVersionMajor, y4aVersionMinor, y4aVersionPatch, GitUtil.revCount].join(".") + y4aVersionSuffix
+    y4aVersionCode = y4aVersionMajor * 1000000 + y4aVersionMinor * 1000 + y4aVersionPatch
+    y4aVersionName = "${y4aVersionString} (${y4aCodeName} ${y4aBuildDate} ${y4aRevision})"
 }
 
 android {
@@ -27,6 +62,8 @@ android {
         applicationId "shibafu.yukari"
         minSdkVersion 16
         targetSdkVersion 22
+        versionCode y4aVersionCode
+        versionName y4aVersionName
 
         vectorDrawables.useSupportLibrary = true
 
@@ -187,4 +224,9 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+}
+
+task showVersion {
+    println "VersionCode: " + y4aVersionCode
+    println "VersionName: " + y4aVersionName
 }
