shibafu528の自宅の資源への依存を解消

--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -9,6 +9,9 @@ repositories {
     maven {
         url "http://twitter4j.org/maven2"
     }
+    maven {
+        url "https://dl.bintray.com/shibafu528/maven"
+    }
 }
 
 class GitUtil {
@@ -179,7 +182,7 @@ dependencies {
             exclude group: 'org.twitter4j', module: 'twitter4j-core'
         }
     } else {
-        implementation 'info.shibafu528.yukari:yukari-exvoice:20180513.002641', {
+        implementation 'info.shibafu528.yukari:yukari-exvoice:20180820.221014', {
             exclude group: 'org.twitter4j', module: 'twitter4j-core'
         }
     }
