--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -222,6 +222,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testImplementation "org.mockito:mockito-core:2.21.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0"
     testImplementation "org.robolectric:robolectric:3.8"
 }
 
