--- a/yukari-processor-runtime/build.gradle
+++ b/yukari-processor-runtime/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     compileOnly 'com.google.android:android:4.0.1.2'
+    compile 'com.google.code.findbugs:jsr305:3.0.2'
 }
 
 def defaultEncoding = 'UTF-8'
