Android 6.0以降で、onCreateで完結しないActivityでTheme.NoDisplayを使うとクラッシュする仕様の回避

--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -99,7 +99,7 @@
 
         <activity
             android:name=".activity.IntentActivity"
-            android:theme="@android:style/Theme.NoDisplay" >
+            android:theme="@style/ColorsTheme.Light.Translucent.FullTransparent" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
