--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -85,6 +85,11 @@ dependencies {
     // Annotation Processor
     implementation 'com.jakewharton:butterknife:8.8.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
+    implementation "com.github.hotchemi:permissionsdispatcher:3.3.1", {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-v13'
+    }
+    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:3.3.1"
     annotationProcessor 'org.projectlombok:lombok:1.16.4'
     compileOnly 'org.projectlombok:lombok:1.16.4'
     implementation project(':yukari-processor-runtime')
