--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.twitter.android.permission.AUTH_APP"/>
 
     <application
@@ -62,6 +63,7 @@
         <service android:name=".service.AsyncCommandService"/>
         <service
             android:name=".service.CacheCleanerService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
             android:process=":cleaner"/>
 
         <activity
