Android Plugin for Gradle 3.4.0への更新と、壊れたビルドスクリプトの修正

--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -116,7 +116,7 @@ android {
     }
     flavorDimensions "stage"
     productFlavors {
-        main {
+        stable {
             dimension "stage"
         }
         alpha {
