画像添付画面から外部アプリを起動したり、最近の画像を選択するとクラッシュする問題の対策

--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -152,7 +152,11 @@ dependencies {
     // UI追加
     implementation 'com.larswerkman:HoloColorPicker:1.4'
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
-    implementation project(':GalleryMultiPicker:library')
+    implementation project(':GalleryMultiPicker:library'), {
+        // TODO: y4a側のsupport libのバージョンを28系に上げれば、ここは消せる
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.android.support', module: 'design'
+    }
 
     // Twitter4J
     implementation "org.twitter4j:twitter4j-core:${twitter4jVersion}"
