--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:largeHeap="true"
-        android:name=".core.YukariApplication">
+        android:name=".core.YukariApplication"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
