--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -141,6 +141,7 @@ dependencies {
     implementation "com.android.support:support-v4:$supportLibVersion"
     implementation "com.android.support:design:$supportLibVersion"
     implementation "com.android.support:exifinterface:$supportLibVersion"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 //    compile "com.android.support:multidex:1.0.2"
 
     // Play Services
