--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -214,6 +214,7 @@ dependencies {
     implementation 'com.annimon:stream:1.0.8'
     implementation 'org.eclipse.collections:eclipse-collections-api:7.1.0'
     implementation 'org.eclipse.collections:eclipse-collections:7.1.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
     implementation fileTree(dir: './libs', includes: ['*.jar'])
 
     // Kotlin
