--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -44,8 +44,8 @@ ext {
 
     y4aVersionMajor = 3
     y4aVersionMinor = 0
-    y4aVersionPatch = 0
-    y4aVersionSuffix = ''
+    y4aVersionPatch = 1
+    y4aVersionSuffix = '-dev'
     y4aCodeName = 'linkage'
 
     y4aRevision = GitUtil.revHash.substring(0, 7)
