--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -246,6 +246,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.21.0"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0"
     testImplementation "org.robolectric:robolectric:4.3"
+    testImplementation 'org.amshove.kluent:kluent-android:1.53'
 }
 
 // Kotlin
