--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -72,7 +72,7 @@ android {
         vectorDrawables.useSupportLibrary = true
 
         ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
 
