--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:theme="@style/AppTheme"
         android:largeHeap="true"
         android:name=".core.YukariApplication"
-        android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true">
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
