--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -226,6 +226,7 @@ dependencies {
     alphaImplementation 'com.deploygate:sdk:4.1.0'
 
     // いろいろ
+    implementation project(':gl-helpers')
     implementation 'com.annimon:stream:1.0.8'
     implementation 'com.google.guava:guava:22.0-android'
     implementation 'org.eclipse.collections:eclipse-collections-api:7.1.0'
