--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -194,6 +194,7 @@ dependencies {
     implementation 'com.larswerkman:HoloColorPicker:1.4'
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
     implementation project(':GalleryMultiPicker:library')
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 
     // Twitter4J
     implementation "org.twitter4j:twitter4j-core:${twitter4jVersion}"
