画像プレビューの複数枚ページ切り替え対応

--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -188,6 +188,9 @@
             android:name=".activity.PreviewActivity"
             android:theme="@style/ColorsTheme.Light.Translucent.NoTitle"/>
         <activity
+            android:name=".activity.PreviewActivity2"
+            android:theme="@style/ColorsTheme.Light.Translucent.NoTitle"/>
+        <activity
             android:name=".activity.MoviePreviewActivity"
             android:theme="@style/ColorsTheme.Light.Translucent.NoTitle"/>
 
