--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -63,10 +63,10 @@ ext {
     exvoiceVersion = '20211121.073240'
 
     y4aVersionMajor = 3
-    y4aVersionMinor = 0
-    y4aVersionPatch = 8
+    y4aVersionMinor = 1
+    y4aVersionPatch = 0
     y4aVersionSuffix = ''
-    y4aCodeName = 'linkage'
+    y4aCodeName = 'mirage'
 
     git = new GitUtil(directory: rootProject.projectDir)
     y4aRevision = git.revHash.substring(0, 7)
